<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center" 
    android:orientation="vertical"
    android:background="#000000">

    <LinearLayout style="@style/TitleBar"
        android:visibility="gone">
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/title_home"
            android:onClick="onClickHome" />

        <ImageView style="@style/TitleBarSeparator" />
        <TextView style="@style/TitleBarText" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:src="@drawable/title_search"
            android:onClick="onClickSearch" />
    </LinearLayout>
    
    <ProgressBar android:id="@+id/progressbar"
	    style="?android:attr/progressBarStyleHorizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="3dp"
	    android:max="100"
	/>
    
    <FrameLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        
        <TextView android:id="@+id/loading_tip"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:text="@string/loading_pic"
	        android:textSize="@dimen/text_size_medium"
	        android:gravity="center"
	        android:textColor="#ffffff" />
	    
	    <ImageView
	        android:id="@+id/imageviewer"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:adjustViewBounds="true"
	        android:contentDescription="@string/description_logo"
	        android:visibility="gone">
	    </ImageView>
        
    </FrameLayout>


</LinearLayout>