<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout style="@style/TitleBar">
    	<ImageButton style="@style/TitleBarAction"
    		android:contentDescription="@string/description_logo"
    		android:src="@drawable/title_home" 
    		android:onClick="onClickHome" />
    	<!--  <ImageView style="@style/TitleBarSeparator" /> -->
    	<EditText style="@style/TitleBarSearch" 
    	    android:id="@+id/edit_search" />

    	<ImageButton style="@style/TitleBarAction"
    		android:id="@+id/search_button"
    		android:contentDescription="@string/description_search"
    		android:src="@drawable/title_search"
    		android:onClick="onClickSearch"/>
    </LinearLayout>
    
    <ProgressBar android:id="@+id/progressbar"
	    style="?android:attr/progressBarStyleHorizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="3dp"
	    android:max="100"
	    android:visibility="gone"
	/>
    
    <FrameLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        
         <TextView android:id="@+id/loading_tip"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:text="@string/search_loading_tip"
	        android:textSize="@dimen/text_size_medium"
	        android:gravity="center"
	        android:textColor="#000000" />
        
        <WebView android:id="@+id/search_webview"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:visibility="gone"/>   
        
    </FrameLayout>
 		

</LinearLayout>
