<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2011 Wglxy.com

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout style="@style/TitleBar">
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/title_home"
            android:onClick="onClickHome" />

        <ImageView style="@style/TitleBarSeparator" />
        <TextView style="@style/TitleBarText" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:src="@drawable/ic_menu_refresh"
            android:onClick="onClickRefresh" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:src="@drawable/title_search"
            android:onClick="onClickSearch" />
    </LinearLayout>
    
    <ProgressBar android:id="@+id/progressbar"
	    style="?android:attr/progressBarStyleHorizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="3dp"
	    android:max="100"
	    android:visibility="gone"
	/>
    <FrameLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        
        <TextView android:id="@+id/loading_tip"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:text="@string/loading_pic"
	        android:textSize="@dimen/text_size_medium"
	        android:gravity="center"
	        android:textColor="#000000" />
        
        <WebView  android:id="@+id/webview"
		    android:layout_width="fill_parent" 
		    android:layout_height="fill_parent"
		    android:visibility="gone"
    	/>
        
    </FrameLayout>

</LinearLayout>
